--- a/SoundLabSocial/bin/SoundLabSocial.dll.config
+++ b/SoundLabSocial/bin/SoundLabSocial.dll.config
@@ -11,8 +11,8 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-SoundLabSocial-20210412074706.mdf;Initial Catalog=aspnet-SoundLabSocial-20210412074706;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+	  <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=SoundLabSocial;Integrated Security=True"
+		providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
