--- a/SoundLabSocial.Models/SoundLabSocial.Models.csproj
+++ b/SoundLabSocial.Models/SoundLabSocial.Models.csproj
@@ -54,7 +54,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PersonalAudioListItem.cs" />
+    <Compile Include="PlaylistListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SongListItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
