--- a/SoundLabSocial.Models/SoundLabSocial.Models.csproj
+++ b/SoundLabSocial.Models/SoundLabSocial.Models.csproj
@@ -54,9 +54,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PersonalAudioCreate.cs" />
     <Compile Include="PersonalAudioListItem.cs" />
+    <Compile Include="PlaylistCreate.cs" />
     <Compile Include="PlaylistListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SongCreate.cs" />
     <Compile Include="SongListItem.cs" />
   </ItemGroup>
   <ItemGroup>
