added models and controller methods to get all tables by their ids

--- a/SoundLabSocial.Models/SoundLabSocial.Models.csproj
+++ b/SoundLabSocial.Models/SoundLabSocial.Models.csproj
@@ -55,11 +55,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PersonalAudioCreate.cs" />
+    <Compile Include="PersonalAudioDetail.cs" />
     <Compile Include="PersonalAudioListItem.cs" />
     <Compile Include="PlaylistCreate.cs" />
+    <Compile Include="PlaylistDetail.cs" />
     <Compile Include="PlaylistListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SongCreate.cs" />
+    <Compile Include="SongDetail.cs" />
     <Compile Include="SongListItem.cs" />
   </ItemGroup>
   <ItemGroup>
