added views and service methods to get all tables by their ids. ran into issue. troubleshooting

--- a/SoundLabSocial/SoundLabSocial.csproj
+++ b/SoundLabSocial/SoundLabSocial.csproj
@@ -243,6 +243,9 @@
     <Content Include="Views\Song\Create.cshtml" />
     <Content Include="Views\PersonalAudio\Create.cshtml" />
     <Content Include="Views\Playlist\Create.cshtml" />
+    <Content Include="Views\Song\Details.cshtml" />
+    <Content Include="Views\PersonalAudio\Details.cshtml" />
+    <Content Include="Views\Playlist\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
