--- a/SoundLabSocial.Models/SoundLabSocial.Models.csproj
+++ b/SoundLabSocial.Models/SoundLabSocial.Models.csproj
@@ -56,13 +56,16 @@
   <ItemGroup>
     <Compile Include="PersonalAudioCreate.cs" />
     <Compile Include="PersonalAudioDetail.cs" />
+    <Compile Include="PersonalAudioEdit.cs" />
     <Compile Include="PersonalAudioListItem.cs" />
     <Compile Include="PlaylistCreate.cs" />
     <Compile Include="PlaylistDetail.cs" />
+    <Compile Include="PlaylistEdit.cs" />
     <Compile Include="PlaylistListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SongCreate.cs" />
     <Compile Include="SongDetail.cs" />
+    <Compile Include="SongEdit.cs" />
     <Compile Include="SongListItem.cs" />
   </ItemGroup>
   <ItemGroup>
