--- a/SoundLabSocial/SoundLabSocial.csproj
+++ b/SoundLabSocial/SoundLabSocial.csproj
@@ -252,6 +252,7 @@
     <Content Include="Views\Song\Delete.cshtml" />
     <Content Include="Views\PersonalAudio\Delete.cshtml" />
     <Content Include="Views\Playlist\Delete.cshtml" />
+    <Content Include="Views\Shared\DisplayTemplates\DateTimeOffset.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
