added playlist id column to song table and ran migration. continued front end work on home/index

--- a/SoundLabSocial.Data/SoundLabSocial.Data.csproj
+++ b/SoundLabSocial.Data/SoundLabSocial.Data.csproj
@@ -83,6 +83,10 @@
     <Compile Include="Migrations\202104210004554_ChangedReleaseYearToString.Designer.cs">
       <DependentUpon>202104210004554_ChangedReleaseYearToString.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202105091700360_AddedPlaylistColumn.cs" />
+    <Compile Include="Migrations\202105091700360_AddedPlaylistColumn.Designer.cs">
+      <DependentUpon>202105091700360_AddedPlaylistColumn.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="PersonalAudio.cs" />
     <Compile Include="Playlist.cs" />
@@ -114,6 +118,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202104210004554_ChangedReleaseYearToString.resx">
       <DependentUpon>202104210004554_ChangedReleaseYearToString.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202105091700360_AddedPlaylistColumn.resx">
+      <DependentUpon>202105091700360_AddedPlaylistColumn.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
